unpackaged/main/default/objects/FulfillmentOrder/FulfillmentOrder.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>