unpackaged/main/default/objects/FulfillmentOrder/fields/duplicates__c.field-meta.xml
<CustomField>
    <fullName>duplicates__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <label>Duplicates</label>
    <length>25</length>
    <type>Text</type>
</CustomField>