unpackaged/main/default/objects/FulfillmentOrder/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>FulfilledFromLocation.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>