unpackaged/main/default/objects/FulfillmentOrder/fields/OrderSummaryNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderSummaryNumber__c</fullName>
    <formula>OrderSummary.OrderNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Summary Number</label>
    <type>Text</type>
</CustomField>