unpackaged/main/default/objects/FulfillmentOrder/fields/RI_Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>RI_Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <length>255</length>
    <type>Text</type>
</CustomField>