unpackaged/main/default/objects/FulfillmentOrder/fields/sentToToshi__c.field-meta.xml
<CustomField>
    <fullName>sentToToshi__c</fullName>
    <label>Sent To Toshi</label>
    <type>DateTime</type>
</CustomField>