unpackaged/main/default/objects/FulfillmentOrder/validationRules/Fulfilled_To_Country_can_not_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Fulfilled_To_Country_can_not_be_changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(FulfilledToCountry), $Profile.Name  &lt;&gt; &apos;System Administrator&apos;, OR(PRIORVALUE(FulfilledToCountry) &lt;&gt; &apos;&apos;,PRIORVALUE(FulfilledToCountry) &lt;&gt; null))</errorConditionFormula>
    <errorMessage>You don’t have rights to modify this field</errorMessage>
</ValidationRule>