unpackaged/main/default/objects/FulfillmentOrder/validationRules/Fulfilled_To_Country_ISO_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Fulfilled_To_Country_ISO_2</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        ISBLANK(FulfilledToCountry),
								NOT(REGEX(UPPER(FulfilledToCountry), &quot;^[A-Z]{2}$&quot;))
    ),
    $Profile.Name = &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>The value should be in the format ISO 2 and should not be empty.</errorMessage>
</ValidationRule>